# roll_up

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
contracts/: Miximus.sol  Pairing.sol  Verifier.sol  contract_deploy.py  roll_up.sol
depends/: CMakeLists.txt
keys/: vk.json
pythonWrapper/: helper.py  utils.py
src/: CMakeLists.txt  export.cpp  roll_up.hpp  roll_up.tcc  roll_up_wrapper.cpp  roll_up_wrapper.hpp  tx.hpp  tx.tcc
src/ZoKrates/: wraplibsnark.cpp
src/sha256/: sha256_ethereum.cpp
tests/: test.py
